--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -653,5 +653,22 @@
   font-style: italic;
 }
 
+.red {
+    border-radius: 120px;
+    opacity: .75;
+    background-color: #FF0000;
+}
+
+.blue {
+    border-radius: 120px;
+    opacity: .75;
+    background-color: #0000FF;
+}
+.black{
+	border-radius: 120px;
+    opacity: 1;
+    background-color: #000000;
+}
+
 
 
