--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,3 +1,52 @@
+.imgBoton{
+	width: 44px !important;
+	height: 44px !important;
+	margin: 3px;
+
+}
+.divSeccion{
+	margin-top: 100%;
+	/*background-color: rgba(205, 230, 255, 1.0);*/
+	background-color: rgba(0, 0, 0, 0.7);
+	z-index: 900001;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.divSeccion button img{
+	background-color: #fff;
+	border-radius: 4px;
+	margin-right: 5px;
+	width: 44px;
+	height: 44px;
+}
+
+.divSeccion h4{
+	font-size: 16px;
+	color: #FFF;
+	margin-left: 0px;
+	padding: 0px;
+	margin-top: 3px;
+}
+.divSeccion button{
+	width: 50px !important;
+	height: 50px !important;
+	padding: 0px;
+}
+
+#divMenu{
+	position: absolute;
+	top: 50px;
+	right: 0px;
+	z-index: 99;
+	width: 16%;
+	height: 90%;
+	/*background-color: #FFFFFF;*/
+	float: right;
+	padding-right: 10px;
+	padding-top: 10px;
+
+}
 #divAbajo{
 	position: absolute;
 	z-index: 1000;
@@ -344,7 +393,7 @@
 	width: 250px;
 	left: 50%;
 	margin-left: -125px;
-	height: 300px;
+	height: 200px;
 	top: 400px;
 	
 }
